# managing-machine

./: MANIFEST.in  README.md  pyproject.toml
src/managing_machine/: __init__.py  cli.py  config.py  githf.py  machina.yaml  machine.py  utilities.py
src/name_of_the_machine/: config.py  machina.yaml  machine.py
tests/: test_cli.py  test_e2e.py  test_llm_soup.py  test_utilities.py
